# workflowy_cli

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  install.sh  release-please-config.json  workflowy_api.md
.github/workflows/: ci.yml  release.yml
.manifold/: commandments-impl.json  commandments-impl.md  commandments-impl.verify.json  workflowy-cli.json  workflowy-cli.md  workflowy-cli.verify.json
claudedocs/: commandments-report.md
src/: cache.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  output.rs  prime.rs  validation.rs
src/api/: mod.rs  nodes.rs  targets.rs
tests/: integration_test.rs
tests/fixtures/: node_create.json  node_get.json  nodes_export.json  nodes_list.json  targets_list.json
