[package]
name = "workflowy-cli"
version = "0.1.0"
edition = "2021"
description = "Token-efficient Workflowy CLI for AI agents"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rpassword = "7"
