[package]
name = "workflowy-cli"
version = "0.1.1"
edition = "2021"
description = "Token-efficient Workflowy CLI for AI agents"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rpassword = "7"
# Satisfies: RT-4 (structured logging), T5 (stderr-only), U2 (opt-in verbose)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# Satisfies: RT-1.1 (env var test isolation), TN1 (4-crate budget: 1/4)
serial_test = "3"
# Satisfies: RT-3 (integration tests), TN2 (blocking-compatible mock server)
mockito = "1"
